create reusable grid and container classes

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,22 @@ ul {
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 2.4rem;
+}
+
+.grid {
+  display: grid;
+  gap: 8rem;
+}
+.grid-2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid-3-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
 
 /* *****************************
      header
