--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,57 +1,3 @@
-html {
-  font-size: 62.5%;
-  scroll-behavior: smooth;
-}
-/* *************************
-   general styling 
-**************************** */
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  line-height: 1;
-  font-family: Arial, Helvetica, sans-serif;
-  /* font-family: "Roboto", sans-serif; */
-  color: #232b2b;
-}
-a {
-  text-decoration: none;
-}
-ul {
-  list-style: none;
-}
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  color: #fff;
-  padding: 1.6rem 4.8rem;
-  border-radius: 10px;
-  font-size: 1.6rem;
-  font-weight: 600;
-  transition: all ease-in-out 0.2s;
-}
-
-/* helper class which is reusable  */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 2.4rem;
-}
-
-.grid {
-  display: grid;
-  gap: 8rem;
-}
-.grid-2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-.grid-3-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
 /* *****************************
      header
 ***************************** */
@@ -120,12 +66,6 @@ ul {
 .hero-img {
   width: 100%;
 }
-.hero-header {
-  font-size: 5.2rem;
-  margin-bottom: 5.2rem;
-  line-height: 1.1;
-  letter-spacing: -0.5px;
-}
 .hero-description {
   font-size: 1.8rem;
   line-height: 1.5;
@@ -187,4 +127,36 @@ ul {
  ******************************* */
 .section-how {
   padding: 8rem 0;
+}
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.step-img {
+  width: 30%;
+}
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #c96e1e;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.5px;
+}
+.step-number {
+  font-size: 8rem;
+  font-weight: 600;
+  color: #8c7f74;
+  margin-bottom: 1.2rem;
+  margin-top: 0;
+}
+.heading-tertiary {
+  font-size: 3rem;
+  margin-bottom: 2.4rem;
+}
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.5;
 }
