create the meal section and add some more reusable selectors

--- a/styles/general.css
+++ b/styles/general.css
@@ -19,6 +19,7 @@ a {
 }
 ul {
   list-style: none;
+  padding-inline-start: 0;
 }
 .btn:link,
 .btn:visited {
@@ -58,6 +59,7 @@ ul {
 .hero-header,
 .heading-secondary,
 .heading-tertiary {
+  margin-top: 0%;
   font-weight: 700;
   line-height: 1.1;
   letter-spacing: -0.5px;
@@ -69,4 +71,7 @@ ul {
 .heading-secondary {
   font-size: 4.4rem;
   margin-bottom: 8rem;
+}
+.text-center {
+  text-align: center;
 }
