--- a/styles/general.css
+++ b/styles/general.css
@@ -2,6 +2,10 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 /* *************************
      general styling 
   **************************** */
