--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,6 +267,119 @@
   align-items: center;
   gap: 1.6rem;
 }
+.meal-recipes:link,
+.meal-recipes:visited {
+  font-size: 1.4rem;
+  color: #e67e22;
+  display: inline-block;
+  margin-top: 3.2rem;
+  padding: 0.4rem 0;
+  border-bottom: 1px solid #e67e22;
+  transition: all 0.2s;
+}
+.meal-recipes:hover,
+.meal-recipes:active {
+  color: #c96e1e;
+  border-bottom: 1px solid #c96e1e;
+  text-shadow: 1px 1px 4px #e67d2233;
+}
+
+/* *****************************
+     testimonials section styling  
+ ******************************* */
+
+.section-testimonials {
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  padding: 1.2rem;
+  align-items: center;
+}
+.testimonials-container {
+  padding: 8rem;
+}
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 3.2rem;
+  column-gap: 6.4rem;
+}
+.testimonial-img {
+  width: 25%;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+.testimonial-text {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  margin-bottom: 1.6rem;
+}
+.testimonial-name {
+  font-size: 1.4rem;
+  color: #777777;
+  font-style: italic;
+}
+
+/* *****************************
+     gallery section styling  
+ ******************************* */
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.2rem;
+  padding: 2.4rem;
+}
+.gallery-items {
+  overflow: hidden;
+}
+.gallery-img {
+  display: block;
+  width: 100%;
+  transition: all 0.2s;
+}
+.gallery-img:hover {
+  transform: scale(1.1);
+}
+
+/* *****************************
+     pricing section styling  
+ ******************************* */
+
+.section-pricing {
+  padding: 8rem;
+}
+.plan-header {
+  text-align: center;
+  margin-bottom: 3.2rem;
+}
+.plan-name {
+  color: #e67e22;
+  font-weight: 600;
+  font-size: 2rem;
+  letter-spacing: 0.75;
+  text-transform: uppercase;
+  margin-bottom: 3.2rem;
+}
+.plan-price {
+  font-size: 6.4rem;
+  font-weight: 600;
+  color: #3b444b;
+  margin-bottom: 1.6rem;
+}
+.plan-price span {
+  font-size: 3.2rem;
+  font-weight: 500;
+  margin-right: 1rem;
+}
+.plan-text {
+  font-size: 1.6rem;
+  font-weight: 200;
+  line-height: 1.5;
+  color: #777777;
+}
+.plan-signup {
+  text-align: center;
+  margin-top: 2.4rem;
+}
 
 /* fontawesome icons  */
 .fas {
