create features div and add pricing cards effects

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,6 +277,7 @@
   border-bottom: 1px solid #e67e22;
   transition: all 0.2s;
 }
+
 .meal-recipes:hover,
 .meal-recipes:active {
   color: #c96e1e;
@@ -346,6 +347,35 @@
 
 .section-pricing {
   padding: 8rem;
+  background-color: #fcefe3;
+}
+.pricing-plan {
+  background-color: #fff;
+  border-radius: 1rem;
+  padding: 3.2rem;
+  width: 60%;
+  box-shadow: 0 0 3.2rem 0 rgb(0 0 0 / 30%);
+  transition: all 0.2s;
+}
+.pricing-plan:first-child {
+  justify-self: end;
+}
+.pricing-plan-complete {
+  position: relative;
+  overflow: hidden;
+  background-color: #f9dfc8;
+}
+.pricing-plan-complete::after {
+  content: "best value";
+  position: absolute;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 600;
+  top: 4%;
+  right: -9%;
+  padding: 0.8rem 3.2rem;
+  background-color: #e6e022;
+  transform: rotate(40deg);
 }
 .plan-header {
   text-align: center;
@@ -379,6 +409,11 @@
 .plan-signup {
   text-align: center;
   margin-top: 2.4rem;
+}
+.pricing-plan:hover,
+.pricing-plan:active {
+  transform: translateY(-0.3rem) scale(1.01);
+  box-shadow: 0 0 4.8rem 0 rgba(0, 0, 0, 0.22);
 }
 
 /* fontawesome icons  */
