--- a/styles/general.css
+++ b/styles/general.css
@@ -60,6 +60,9 @@ ul {
 .grid-3-cols {
   grid-template-columns: repeat(3, 1fr);
 }
+.grid-4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
 .hero-header,
 .heading-secondary,
 .heading-tertiary {
