--- a/styles/styles.css
+++ b/styles/styles.css
@@ -410,14 +410,31 @@
   text-align: center;
   margin-top: 2.4rem;
 }
-.pricing-plan:hover,
+/* .pricing-plan:hover,
 .pricing-plan:active {
   transform: translateY(-0.3rem) scale(1.01);
   box-shadow: 0 0 4.8rem 0 rgba(0, 0, 0, 0.22);
+} */
+.features {
+  margin-top: 8rem;
 }
-
+.feature-title {
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+.feature-text {
+  font-size: 1.4rem;
+  line-height: 1.5;
+}
 /* fontawesome icons  */
 .fas {
   font-size: 1.8rem;
   color: #e67e22;
+}
+.features .fas {
+  background-color: #f9dfc8;
+  border-radius: 50%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
 }
