finish features styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -410,6 +410,15 @@
   text-align: center;
   margin-top: 2.4rem;
 }
+.plan-cancellation {
+  font-size: 1.2rem;
+  font-weight: 200;
+  line-height: 1.5;
+  color: #777777;
+  text-align: center;
+  margin-bottom: 8rem;
+  margin-top: 2.4rem;
+}
 /* .pricing-plan:hover,
 .pricing-plan:active {
   transform: translateY(-0.3rem) scale(1.01);
@@ -421,7 +430,7 @@
 .feature-title {
   font-size: 1.6rem;
   font-weight: 600;
-  margin-bottom: 2rem;
+  margin-bottom: 1.6rem;
 }
 .feature-text {
   font-size: 1.4rem;
@@ -435,6 +444,6 @@
 .features .fas {
   background-color: #f9dfc8;
   border-radius: 50%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
+  padding: 1.2rem;
+  margin-bottom: 2rem;
 }
