--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,6 +449,7 @@
   grid-template-columns: 2fr 1fr;
   box-shadow: 0 0 3.2rem 0 rgb(0 0 0 / 30%);
   height: 40rem;
+  overflow: hidden;
   border-radius: 1rem;
   background-image: linear-gradient(to right bottom, #c96e1e, #e67e22);
 }
@@ -458,7 +459,25 @@
   background-size: cover;
   background-position: center;
 }
-
+.cta-text-box {
+  color: #392009;
+  padding: 6.4rem;
+}
+.cta .heading-secondary {
+  color: #392009;
+  margin-bottom: 3.2rem;
+}
+.cta-text {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  margin-bottom: 4rem;
+}
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
 /* fontawesome icons  */
 .fas {
   font-size: 1.8rem;
