--- a/styles/general.css
+++ b/styles/general.css
@@ -63,6 +63,9 @@ ul {
 .grid-4-cols {
   grid-template-columns: repeat(4, 1fr);
 }
+.grid-5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
 .hero-header,
 .heading-secondary,
 .heading-tertiary {
