--- a/styles/styles.css
+++ b/styles/styles.css
@@ -426,6 +426,7 @@
 } */
 .features {
   margin-top: 8rem;
+  text-align: center;
 }
 .feature-title {
   font-size: 1.6rem;
@@ -478,6 +479,36 @@
   column-gap: 3.2rem;
   row-gap: 2.4rem;
 }
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1rem;
+  font-family: inherit;
+  font-size: 1.6rem;
+  border: none;
+  border-radius: 1rem;
+  background-color: #fcefe3;
+  box-shadow: 0 1px 2px #00000022;
+}
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+/* *****************************
+     Footer section styling  
+ ******************************* */
+.footer {
+  margin-top: 2.4rem;
+  margin-bottom: 3.2rem;
+  padding: 8rem 0;
+}
+
 /* fontawesome icons  */
 .fas {
   font-size: 1.8rem;
